Fixing paths to assets

--- a/naming-conventions.html
+++ b/naming-conventions.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Style Guide - MMT Digital</title>
-    <link rel="stylesheet" href="../../css/app.css" />
-    <script src="../../bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" href="css/app.css" />
+    <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
   <body>
     <div class="fixed">
@@ -13,8 +13,8 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a href="#">
-                <img src="/assets/mmt-logo.svg" width="32" height="32" />
+              <a href="./">
+                <img src="assets/mmt-logo.svg" width="32" height="32" />
               </a>
             </h1>
           </li>
@@ -87,8 +87,8 @@ filenameslikethis.js</code></pre>
           and JSHint-aware code editors will notice it and follow it though all code in your project.</p>
       </div>
     </div>
-    <script src="../../bower_components/jquery/jquery.min.js"></script>
-    <script src="../../bower_components/foundation/js/foundation.min.js"></script>
-    <script src="../../js/app.js"></script>
+    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
