--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Style Guide - MMT Digital</title>
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="highlight/styles/default.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
+    <script src="highlight/highlight.pack.js"></script>
   </head>
   <body>
     <div class="fixed">
@@ -56,6 +58,9 @@
     </div>
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
     <script src="js/app.js"></script>
   </body>
 </html>
