--- a/index.html
+++ b/index.html
@@ -9,58 +9,65 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="highlight/highlight.pack.js"></script>
   </head>
-  <body>
-    <div class="fixed">
-      <nav class="top-bar" data-topbar>
-        <ul class="title-area">
-          <li class="name">
-            <h1>
-              <a href="./">
-                <img src="assets/mmt-logo.svg" width="32" height="32" />
-              </a>
-            </h1>
-          </li>
-          <li class="toggle-topbar menu-icon">
-            <a href="#"><span>Menu</span>
-            </a>
-          </li>
-        </ul>
-        <section class="top-bar-section">
+  <body class="antialiased hide-extras">
+    <div class="marketing off-canvas-wrap">
+      <div class="inner-wrap">
+        <div class="contain-to-grid fixed">
+          <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+              <li class="name">
+                <h1>
+                  <a href="./">
+                    <img src="assets/mmt-logo.svg" width="32" height="32" />
+                  </a>
+                </h1>
+              </li>
+              <li class="toggle-topbar menu-icon">
+                <a href="#"><span>Menu</span>
+                </a>
+              </li>
+            </ul>
+            <section class="top-bar-section">
 
-          <!-- Right Nav Section -->
-          <ul class="left">
-            <li class="has-dropdown">
-              <a href="#">JavaScript Style Guide</a>
-              <ul class="dropdown">
-                <li> <a href="summary.html">The short version</a> </li>
-                <li> <a href="formatting.html">Source code formatting</a> </li>
-                <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
-                <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
+              <!-- Right Nav Section -->
+              <ul class="left">
+                <li class="has-dropdown">
+                  <a href="#">JavaScript Style Guide</a>
+                  <ul class="dropdown">
+                    <li> <a href="summary.html">The short version</a> </li>
+                    <li> <a href="formatting.html">Source code formatting</a> </li>
+                    <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
+                    <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
+                  </ul>
+                </li>
               </ul>
-            </li>
-          </ul>
+            </section>
+          </nav>
+        </div>
+        <section role="main">
+          <div class="row">
+            <div class="large-12 columns">
+              <h1></h1>
+              <hr/>
+            </div>
+            <div class="large-12 columns">
+              <h1 id="background-reading-">Background reading:</h1>
+              <p>The following JavaScript Style Guidelines are drawn from many sources, but primarily from the
+                <a href="https://github.com/Seravo/js-winning-style">JS Winning Style</a>,
+                <a href="https://github.com/rwaldron/idiomatic.js/">Idomatic Style manifesto</a>,
+                <a href="https://github.com/airbnb/javascript">Airbnb JavaScript Style Guide</a>and
+                <a href="http://google-styleguide.googlecode.com/svn/trunk/javascriptguide.xml">Google JavaScript Style Guide</a>.</p>
+            </div>
+          </div>
         </section>
-      </nav>
-    </div>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1></h1>
-        <hr/>
-      </div>
-      <div class="large-12 columns">
-        <h1 id="background-reading-">Background reading:</h1>
-        <p>The following JavaScript Style Guidelines are drawn from many sources, but primarily from the
-          <a href="https://github.com/Seravo/js-winning-style">JS Winning Style</a>,
-          <a href="https://github.com/rwaldron/idiomatic.js/">Idomatic Style manifesto</a>,
-          <a href="https://github.com/airbnb/javascript">Airbnb JavaScript Style Guide</a>and
-          <a href="http://google-styleguide.googlecode.com/svn/trunk/javascriptguide.xml">Google JavaScript Style Guide</a>.</p>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/foundation/js/foundation.min.js"></script>
+        <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
+        <script>
+          hljs.initHighlightingOnLoad();
+        </script>
+        <script src="js/app.js"></script>
       </div>
     </div>
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
-    <script src="js/app.js"></script>
   </body>
 </html>
