--- a/summary.html
+++ b/summary.html
@@ -9,47 +9,50 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="highlight/highlight.pack.js"></script>
   </head>
-  <body>
-    <div class="fixed">
-      <nav class="top-bar" data-topbar>
-        <ul class="title-area">
-          <li class="name">
-            <h1>
-              <a href="./">
-                <img src="assets/mmt-logo.svg" width="32" height="32" />
-              </a>
-            </h1>
-          </li>
-          <li class="toggle-topbar menu-icon">
-            <a href="#"><span>Menu</span>
-            </a>
-          </li>
-        </ul>
-        <section class="top-bar-section">
+  <body class="antialiased hide-extras">
+    <div class="marketing off-canvas-wrap">
+      <div class="inner-wrap">
+        <div class="contain-to-grid fixed">
+          <nav class="top-bar" data-topbar>
+            <ul class="title-area">
+              <li class="name">
+                <h1>
+                  <a href="./">
+                    <img src="assets/mmt-logo.svg" width="32" height="32" />
+                  </a>
+                </h1>
+              </li>
+              <li class="toggle-topbar menu-icon">
+                <a href="#"><span>Menu</span>
+                </a>
+              </li>
+            </ul>
+            <section class="top-bar-section">
 
-          <!-- Right Nav Section -->
-          <ul class="left">
-            <li class="has-dropdown">
-              <a href="#">JavaScript Style Guide</a>
-              <ul class="dropdown">
-                <li> <a href="summary.html">The short version</a> </li>
-                <li> <a href="formatting.html">Source code formatting</a> </li>
-                <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
-                <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
+              <!-- Right Nav Section -->
+              <ul class="left">
+                <li class="has-dropdown">
+                  <a href="#">JavaScript Style Guide</a>
+                  <ul class="dropdown">
+                    <li> <a href="summary.html">The short version</a> </li>
+                    <li> <a href="formatting.html">Source code formatting</a> </li>
+                    <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
+                    <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
+                  </ul>
+                </li>
               </ul>
-            </li>
-          </ul>
-        </section>
-      </nav>
-    </div>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1></h1>
-        <hr/>
-      </div>
-      <div class="large-12 columns">
-        <ol>
-          <li>Create a <strong>.jshintrc</strong> file with the following content, and place it in the root folder of your project, and then configure your IDE to use those settings and auto-format your code when you save or commit it.<pre><code> {
+            </section>
+          </nav>
+        </div>
+        <section role="main">
+          <div class="row">
+            <div class="large-12 columns">
+              <h1></h1>
+              <hr/>
+            </div>
+            <div class="large-12 columns">
+              <ol>
+                <li>Create a <strong>.jshintrc</strong> file with the following content, and place it in the root folder of your project, and then configure your IDE to use those settings and auto-format your code when you save or commit it.<pre><code> {
    &quot;camelcase&quot; : true,
    &quot;indent&quot;: 2,
    &quot;undef&quot;: true,
@@ -63,51 +66,55 @@
    &quot;browser&quot;: true,
    &quot;jquery&quot;: true
  }</code></pre>
-          </li>
-          <li>Use descriptive function and variable names, in the format:
-            <ul>
-              <li><code>functionNamesLikeThis</code>
-              </li>
-              <li><code>variableNamesLikeThis</code>
-              </li>
-              <li><code>ClassNamesLikeThis</code>
-              </li>
-              <li><code>EnumNamesLikeThis</code>
-              </li>
-              <li><code>methodNamesLikeThis</code>
-              </li>
-              <li><code>CONSTANT_VALUES_LIKE_THIS</code>
-              </li>
-              <li><code>foo.namespaceNamesLikeThis.bar</code>
-              </li>
-              <li><code>filenameslikethis.js</code>
-              </li>
-            </ul>
-          </li>
-          <li>Use a consistent vocabulary like is, has, set and get:
-            <ul>
-              <li><code>function isReady()</code>
-              </li>
-              <li><code>function hasValue()</code>
-              </li>
-              <li><code>function setName()</code>
-              </li>
-              <li><code>function getName()</code>
-              </li>
-            </ul>
-          </li>
-          <li>Use whitespace as outlined by the
-            <a href="https://github.com/rwaldron/idiomatic.js/#spacing">Idiomatic JavaScript Style Guide</a>
-          </li>
-          <li>Braces go on the same line, not a new line.</li>
-        </ol>
+                </li>
+                <li>Use descriptive function and variable names, in the format:
+                  <ul>
+                    <li><code>functionNamesLikeThis</code>
+                    </li>
+                    <li><code>variableNamesLikeThis</code>
+                    </li>
+                    <li><code>ClassNamesLikeThis</code>
+                    </li>
+                    <li><code>EnumNamesLikeThis</code>
+                    </li>
+                    <li><code>methodNamesLikeThis</code>
+                    </li>
+                    <li><code>CONSTANT_VALUES_LIKE_THIS</code>
+                    </li>
+                    <li><code>foo.namespaceNamesLikeThis.bar</code>
+                    </li>
+                    <li><code>filenameslikethis.js</code>
+                    </li>
+                  </ul>
+                </li>
+                <li>Use a consistent vocabulary like is, has, set and get:
+                  <ul>
+                    <li><code>function isReady()</code>
+                    </li>
+                    <li><code>function hasValue()</code>
+                    </li>
+                    <li><code>function setName()</code>
+                    </li>
+                    <li><code>function getName()</code>
+                    </li>
+                  </ul>
+                </li>
+                <li>Use whitespace as outlined by the
+                  <a href="https://github.com/rwaldron/idiomatic.js/#spacing">Idiomatic JavaScript Style Guide</a>
+                </li>
+                <li>Braces go on the same line, not a new line.</li>
+              </ol>
+            </div>
+          </div>
+        </section>
+        <script src="bower_components/jquery/jquery.min.js"></script>
+        <script src="bower_components/foundation/js/foundation.min.js"></script>
+        <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
+        <script>
+          hljs.initHighlightingOnLoad();
+        </script>
+        <script src="js/app.js"></script>
       </div>
     </div>
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
-    <script src="js/app.js"></script>
   </body>
 </html>
