--- a/naming-conventions.html
+++ b/naming-conventions.html
@@ -9,77 +9,73 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="highlight/highlight.pack.js"></script>
   </head>
-  <body class="antialiased hide-extras">
-    <div class="marketing off-canvas-wrap">
-      <div class="inner-wrap">
-        <div class="contain-to-grid fixed">
-          <nav class="top-bar" data-topbar>
-            <ul class="title-area">
-              <li class="name">
-                <h1>
-                  <a href="./">
-                    <img src="assets/mmt-logo.svg" width="32" height="32" />
-                  </a>
-                </h1>
-              </li>
-              <li class="toggle-topbar menu-icon">
-                <a href="#"><span>Menu</span>
-                </a>
+  <body>
+    <section role="main">
+      <div class="contain-to-grid fixed">
+        <nav class="top-bar" data-topbar>
+          <ul class="title-area">
+            <li class="name">
+              <h1>
+                <a href="./">
+                  <img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em" />JavaScript Style Guide</a>
+              </h1>
+            </li>
+            <li class="toggle-topbar menu-icon">
+              <a href="#"><span>Menu</span>
+              </a>
+            </li>
+          </ul>
+          <section class="top-bar-section">
+
+            <!-- Right Nav Section -->
+            <ul class="left">
+              <li class="has-dropdown">
+                <a href="./">Overview</a>
+                <ul class="dropdown">
+                  <li> <a href="summary.html">The short version</a> </li>
+                  <li> <a href="formatting.html">Source code formatting</a> </li>
+                  <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
+                  <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
+                </ul>
               </li>
             </ul>
-            <section class="top-bar-section">
-
-              <!-- Right Nav Section -->
-              <ul class="left">
-                <li class="has-dropdown">
-                  <a href="#">JavaScript Style Guide</a>
-                  <ul class="dropdown">
-                    <li> <a href="summary.html">The short version</a> </li>
-                    <li> <a href="formatting.html">Source code formatting</a> </li>
-                    <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
-                    <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
-                  </ul>
-                </li>
-              </ul>
-            </section>
-          </nav>
+          </section>
+        </nav>
+      </div>
+      <div class="row">
+        <div class="large-12 columns">
+          <h1>Naming Conventions</h1>
+          <hr/>
         </div>
-        <section role="main">
-          <div class="row">
-            <div class="large-12 columns">
-              <h1></h1>
-              <hr/>
-            </div>
-            <div class="large-12 columns">
-              <h1 id="naming-conventions-">Naming Conventions:</h1>
-              <p>You are not a human code compiler/compressor, so don&#39;t try to be one. Be clear and verbose with your variable names and prefer longer, descriptive names:</p>
-              <pre><code>function veryLongOperationName
+        <div class="large-8 columns">
+          <p>You are not a human code compiler/compressor, so don&#39;t try to be one. Be clear and verbose with your variable names and prefer longer, descriptive names:</p>
+          <pre><code>function veryLongOperationName
 function short()</code></pre>
-              <p>Use vocabulary like is, has, set and get:</p>
-              <pre><code>function isReady()
+          <p>Use vocabulary like is, has, set and get:</p>
+          <pre><code>function isReady()
 function hasValue()
 function setName()
 function getName()</code></pre>
-              <h1 id="variables">Variables</h1>
-              <p>Start first word lowercase and after that all words start with uppercase letter (Camel case):</p>
-              <pre><code>var foo = &quot;&quot;;
+          <h1 id="variables">Variables</h1>
+          <p>Start first word lowercase and after that all words start with uppercase letter (Camel case):</p>
+          <pre><code>var foo = &quot;&quot;;
 var fooName = &quot;&quot;;</code></pre>
-              <h1 id="constants">Constants</h1>
-              <p>Use uppercase with underscore:</p>
-              <pre><code>var CONSTANT = &#39;VALUE&#39;;
+          <h1 id="constants">Constants</h1>
+          <p>Use uppercase with underscore:</p>
+          <pre><code>var CONSTANT = &#39;VALUE&#39;;
 var CONSTANT_NAME = &#39;VALUE&#39;;</code></pre>
-              <h1 id="functions">Functions</h1>
-              <p>Start first word lowercase and after that all words start with uppercase letter (Camel case):</p>
-              <h1 id="arrays">Arrays</h1>
-              <p>Use plural forms of the object the array contains.</p>
-              <pre><code>var documents = [];</code></pre>
-              <h1 id="objects-and-classes">Objects and classes</h1>
-              <p>Use Pascal case (every word&#39;s first letter is capitalized)</p>
-              <pre><code>var ThisIsObject = new Date();</code></pre>
-              <h1 id="other">Other</h1>
-              <p>Use all-lower-hyphen-css-case for multi-word filenames and config keys.</p>
-              <p>In summary:</p>
-              <pre><code>functionNamesLikeThis
+          <h1 id="functions">Functions</h1>
+          <p>Start first word lowercase and after that all words start with uppercase letter (Camel case):</p>
+          <h1 id="arrays">Arrays</h1>
+          <p>Use plural forms of the object the array contains.</p>
+          <pre><code>var documents = [];</code></pre>
+          <h1 id="objects-and-classes">Objects and classes</h1>
+          <p>Use Pascal case (every word&#39;s first letter is capitalized)</p>
+          <pre><code>var ThisIsObject = new Date();</code></pre>
+          <h1 id="other">Other</h1>
+          <p>Use all-lower-hyphen-css-case for multi-word filenames and config keys.</p>
+          <p>In summary:</p>
+          <pre><code>functionNamesLikeThis
 variableNamesLikeThis
 ClassNamesLikeThis
 EnumNamesLikeThis
@@ -87,20 +83,18 @@ methodNamesLikeThis
 CONSTANT_VALUES_LIKE_THIS
 foo.namespaceNamesLikeThis.bar
 filenameslikethis.js</code></pre>
-              <h1 id="use-a-jshintrc-file">Use a .jshintrc file</h1>
-              <p>JSHint is a JavaScript syntax and style checker you can use to alert about code style issues. It integrates well into to many commonly used editors and is a nice way to enforce a common style. You can place it in the root folder of your
-                project and JSHint-aware code editors will notice it and follow it though all code in your project.</p>
-            </div>
-          </div>
-        </section>
-        <script src="bower_components/jquery/jquery.min.js"></script>
-        <script src="bower_components/foundation/js/foundation.min.js"></script>
-        <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
-        <script>
-          hljs.initHighlightingOnLoad();
-        </script>
-        <script src="js/app.js"></script>
+          <h1 id="use-a-jshintrc-file">Use a .jshintrc file</h1>
+          <p>JSHint is a JavaScript syntax and style checker you can use to alert about code style issues. It integrates well into to many commonly used editors and is a nice way to enforce a common style. You can place it in the root folder of your project
+            and JSHint-aware code editors will notice it and follow it though all code in your project.</p>
+        </div>
       </div>
-    </div>
+    </section>
+    <script src="bower_components/jquery/jquery.min.js"></script>
+    <script src="bower_components/foundation/js/foundation.min.js"></script>
+    <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
+    <script src="js/app.js"></script>
   </body>
 </html>
