--- a/index.html
+++ b/index.html
@@ -44,16 +44,26 @@
       </div>
       <div class="row">
         <div class="large-12 columns">
-          <h1>MMT Digital JavaScript Style Guide</h1>
+          <h1>MMT Digital&#x27;s JavaScript Style Guide</h1>
           <hr/>
         </div>
-        <div class="large-8 columns">
-          <h1 id="background-reading-">Background reading:</h1>
-          <p>The following JavaScript Style Guidelines are drawn from many sources, but primarily from the
-            <a href="https://github.com/Seravo/js-winning-style">JS Winning Style</a>,
-            <a href="https://github.com/rwaldron/idiomatic.js/">Idomatic Style manifesto</a>,
-            <a href="https://github.com/airbnb/javascript">Airbnb JavaScript Style Guide</a>and
-            <a href="http://google-styleguide.googlecode.com/svn/trunk/javascriptguide.xml">Google JavaScript Style Guide</a>.</p>
+        <div class="large-12 columns">
+          <h3 id="background-reading-">Background reading:</h3>
+          <p>Our JavaScript Style Guidelines are drawn from a combination of many sources, but primarily from the following sources:</p>
+          <ul>
+            <li> <a href="https://github.com/Seravo/js-winning-style">JavaScript, the winning style</a> </li>
+            <li> <a href="https://github.com/rwaldron/idiomatic.js/">Principles of Writing Consistent, Idiomatic JavaScript</a> </li>
+            <li> <a href="https://github.com/airbnb/javascript">Airbnb JavaScript Style Guide</a> </li>
+            <li> <a href="http://google-styleguide.googlecode.com/svn/trunk/javascriptguide.xml">Google JavaScript Style Guide</a> </li>
+          </ul>
+          <p>
+            <div class="large-4 left column">
+              <img src="http://octodex.github.com/images/forktocat.jpg" alt="Fork Me!">
+            </div>
+          </p>
+          <h3 id="want-to-contribute-">Want to contribute?</h3>
+          <p>Our guidelines are
+            <a href="https://github.com/psyked/js-style-guide">hosted on GitHub;</a>so please, feel free to fork it and send us a pull request.</p>
         </div>
       </div>
     </section>
