Update README.md file

--- a/README.html
+++ b/README.html
@@ -44,9 +44,11 @@
       </div>
       <div class="row">
         <div class="large-12 columns">
-          <pre><code>        grunt-example-project</code></pre>
-          <p>=====================</p>
-          <p>An example grunt starter project, to use with my presentation.</p>
+          <pre><code>        MMT Digital&#39;s JavaScript style guide</code></pre>
+          <p>====================================</p>
+          <p>A work in progress! See
+            <a href="http://psyked.github.io/js-style-guide/">http://psyked.github.io/js-style-guide/</a>
+          </p>
         </div>
       </div>
     </section>
