Add left:auto property to fix magellan position

--- a/development-best-practices.html
+++ b/development-best-practices.html
@@ -51,7 +51,7 @@
           <h2 id="-a-name-compiling-data-magellan-destination-compiling-a-compiling-minification">
             <a name='compiling' data-magellan-destination='compiling'></a>Compiling &amp; minification</h2>
           <p>Always minify or compile your customer-facing code, even if it’s just simple minification with pretty-printing.</p>
-          <div data-magellan-expedition="fixed" data-magellan-top-offset="45">
+          <div data-magellan-expedition="fixed" data-magellan-top-offset="45" style="left:auto">
             <dl class="sub-nav">
               <dd data-magellan-arrival="compiling">
                 <a href="#compiling">Build with HTML</a>
