--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="highlight/highlight.pack.js"></script>
   </head>
   <body>
-    <section role="main">
+    <header>
       <div class="contain-to-grid fixed">
         <nav class="top-bar" data-topbar>
           <ul class="title-area">
@@ -42,6 +42,8 @@
           </section>
         </nav>
       </div>
+    </header>
+    <main role="main">
       <div class="row">
         <div class="large-12 columns">
           <h1>MMT Digital&#x27;s JavaScript Style Guide</h1>
@@ -66,7 +68,18 @@
             <a href="https://github.com/psyked/js-style-guide">hosted on GitHub;</a>so please, feel free to fork it and send us a pull request.</p>
         </div>
       </div>
-    </section>
+    </main>
+    <footer class="zurb-footer">
+      <div class="row">
+        <div class="large-4 columns">
+          <h4>Want to contribute?</h4>
+          <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
+          <p>
+            <a href="https://github.com/psyked/js-style-guide" class="button">View this project on GitHub.</a>
+          </p>
+        </div>
+      </div>
+    </footer>
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
