--- a/README.html
+++ b/README.html
@@ -1,76 +1,68 @@
 <!doctype html>
 <html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>JS Style Guide - MMT Digital</title>
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="highlight/styles/default.css">
+    <link rel="stylesheet" href="css/app.css"/>
     <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="highlight/highlight.pack.js"></script>
-  </head>
-  <body>
-    <header>
-      <div class="contain-to-grid fixed">
-        <nav class="top-bar" data-topbar>
-          <ul class="title-area">
+</head>
+<body>
+<header>
+<div class="contain-to-grid fixed">
+    <nav class="top-bar" data-topbar>
+        <ul class="title-area">
             <li class="name">
-              <h1>
-                <a href="./">
-                  <img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em" />JavaScript Style Guide</a>
-              </h1>
+                <h1>
+                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em"/> JavaScript Style Guide</a>
+                </h1>
             </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span>
-              </a>
-            </li>
-          </ul>
-          <section class="top-bar-section">
+            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+        </ul>
 
+        <section class="top-bar-section">
             <!-- Right Nav Section -->
             <ul class="left">
-              <li class="has-dropdown">
-                <a href="./">Overview</a>
-                <ul class="dropdown">
-                  <li> <a href="summary.html">The short version</a> </li>
-                  <li> <a href="formatting.html">Source code formatting</a> </li>
-                  <li> <a href="naming-conventions.html">Naming Conventions</a> </li>
-                  <li> <a href="development-best-practices.html">JavaScript Best Practices</a> </li>
-                </ul>
-              </li>
+                <li class="has-dropdown">
+                    <a href="./">Overview</a>
+                    <ul class="dropdown">
+                        <li><a href="summary.html">The short version</a></li>
+                        <li><a href="formatting.html">Source code formatting</a></li>
+                        <li><a href="naming-conventions.html">Naming Conventions</a></li>
+                        <li><a href="development-best-practices.html">JavaScript Best Practices</a></li>
+                    </ul>
+                </li>
             </ul>
-          </section>
-        </nav>
-      </div>
-    </header>
-    <main role="main">
-      <div class="row">
-        <div class="large-12 columns">
-          <pre><code>        MMT Digital&#39;s JavaScript style guide</code></pre>
-          <p>====================================</p>
-          <p>A work in progress! See
-            <a href="http://psyked.github.io/js-style-guide/">http://psyked.github.io/js-style-guide/</a>
-          </p>
-        </div>
-      </div>
-    </main>
-    <footer class="zurb-footer">
-      <div class="row">
-        <div class="large-4 columns">
-          <h4>Want to contribute?</h4>
-          <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
-          <p>
-            <a href="https://github.com/psyked/js-style-guide" class="button">View this project on GitHub.</a>
-          </p>
-        </div>
-      </div>
-    </footer>
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
-    <script src="js/app.js"></script>
-  </body>
+        </section>
+    </nav>
+</div></header>
+<main role="main">
+    <div class="row">
+        
+    <pre><code>MMT Digital&#39;s JavaScript style guide</code></pre>
+<p>====================================</p>
+<p>A work in progress! See <a href="http://psyked.github.io/js-style-guide/">http://psyked.github.io/js-style-guide/</a></p>
+
+</main>
+<footer class="zurb-footer">
+    <div class="row">
+        
+<div class="large-4 columns">
+    <h4>Want to contribute?</h4>
+
+    <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
+
+    <p>Fork this project or create a Pull request and we can bring your suggestions into the fold.</p>
+
+    <p><a href="https://github.com/psyked/js-style-guide" class="button">View this project on GitHub.</a></p>
+</div>
+    </div>
+</footer>
+<script src="bower_components/jquery/jquery.min.js"></script>
+<script src="bower_components/foundation/js/foundation.min.js"></script>
+<script src="bower_components/foundation/js/foundation/foundation.magellan.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+<script src="js/app.js"></script>
+</body>
 </html>
