Fix row encapsulation for other pages

--- a/development-best-practices.html
+++ b/development-best-practices.html
@@ -46,7 +46,9 @@
         </div>
     </div>
     
-    <h2 id="-a-name-compiling-data-magellan-destination-compiling-a-compiling-minification"><a name='compiling' data-magellan-destination='compiling'></a>Compiling &amp; minification</h2>
+    <div class='row'>
+<div class='large-12 columns'>
+<h2 id="-a-name-compiling-data-magellan-destination-compiling-a-compiling-minification"><a name='compiling' data-magellan-destination='compiling'></a>Compiling &amp; minification</h2>
 <p>Always minify or compile your customer-facing code, even if it’s just simple minification with pretty-printing.</p>
 <div data-magellan-expedition="fixed" data-magellan-top-offset="45" style="left:auto">
   <dl class="sub-nav">
@@ -56,10 +58,10 @@
   </dl>
 </div>
 
-<h2 id="-a-name-globals-data-magellan-destination-globals-a-globals"><a name='globals' data-magellan-destination='globals'></a>Globals</h2>
-<p>Don’t use globals. “Global name conflicts are difficult to debug, and can cause intractable problems when two projects try to integrate. In order to make it possible to share common JavaScript code, we’ve adopted conventions to prevent collisions.”</p>
-<h2 id="-a-name-strict-data-magellan-destination-strict-a-be-strict"><a name='strict' data-magellan-destination='strict'></a>Be Strict</h2>
-<p>In any kind of JavaScript file it is also good to add the declaration:</p>
+<p><h2 id="-a-name-globals-data-magellan-destination-globals-a-globals"><a name='globals' data-magellan-destination='globals'></a>Globals</h2></p>
+<p><p>Don’t use globals. “Global name conflicts are difficult to debug, and can cause intractable problems when two projects try to integrate. In order to make it possible to share common JavaScript code, we’ve adopted conventions to prevent collisions.”</p></p>
+<p><h2 id="-a-name-strict-data-magellan-destination-strict-a-be-strict"><a name='strict' data-magellan-destination='strict'></a>Be Strict</h2></p>
+<p><p>In any kind of JavaScript file it is also good to add the declaration:</p></p>
 <pre><code>&#39;use strict&#39;;</code></pre>
 <p>This will affect both JSHint and your JavaScript engine, which will become less compliant but run your JavaScript faster.</p>
 <h2 id="-a-name-check-a-check-for-absolute-equality"><a name='Check'></a>Check for absolute equality</h2>
@@ -1069,6 +1071,9 @@ $(&#39;.sidebar &gt; ul&#39;).hide();
 
 // good
 $sidebar.find(&#39;ul&#39;).hide();</code></pre>
+
+<p></div>
+</div></p>
 
 </main>
 <footer class="zurb-footer">
