--- a/summary.html
+++ b/summary.html
@@ -46,7 +46,9 @@
         </div>
     </div>
     
-    <ol>
+    <div class='row'>
+<div class='large-12 columns'>
+<ol>
 <li>Create a <strong>.jshintrc</strong> file with the following content, and place it in the root folder of your project, and then configure your IDE to use those settings and auto-format your code when you save or commit it.<pre><code> {
    &quot;camelcase&quot; : true,
    &quot;indent&quot;: 2,
@@ -83,6 +85,9 @@
 <li>Use whitespace as outlined by the <a href="https://github.com/rwaldron/idiomatic.js/#spacing">Idiomatic JavaScript Style Guide</a></li>
 <li>Braces go on the same line, not a new line.</li>
 </ol>
+
+</div>
+</div>
 
 </main>
 <footer class="zurb-footer">
