--- a/formatting.html
+++ b/formatting.html
@@ -46,12 +46,14 @@
         </div>
     </div>
     
-    <h1 id="source-code-formatting-rules-">Source Code formatting rules:</h1>
+    <div class='row'>
+<div class='large-12 columns'>
+<h1 id="source-code-formatting-rules-">Source Code formatting rules:</h1>
 <p>All code in any code-base should look like a single person typed it, no matter how many people contributed. If you’re joining a project for the first time and it doesn’t follow these guidelines, keep with the existing style of the code - above all else, consistency is key.</p>
 <h1 id="indentation">Indentation</h1>
 <p>Indent your code with two spaces, not longer and no tabs.</p>
 <h1 id="spaces-between-arguments-and-expressions">Spaces between arguments and expressions</h1>
-<p>Use sparingly and to enhance legibility, with some special exceptions for one-liners (see <a href="https://github.com/rwaldron/idiomatic.js/#spacing">https://github.com/rwaldron/idiomatic.js/#spacing</a>). No trailing whitespace on your lines, either.</p>
+<p>Use sparingly and to enhance legibility, with some special exceptions for one-liners (see <a href="https://github.com/rwaldron/idiomatic.js/#spacing"><a href="https://github.com/rwaldron/idiomatic.js/#spacing">https://github.com/rwaldron/idiomatic.js/#spacing</a></a>). No trailing whitespace on your lines, either.</p>
 <pre><code>project.MyClass = function(arg1, arg2) {</code></pre>
 <h1 id="line-length-wrapping-content">Line length &amp; wrapping content</h1>
 <p>Max 80 characters. When wrapping, other indentation than two spaces is allowed to for example align function arguments to the position where the first function argument was.</p>
@@ -64,7 +66,7 @@
 <li>Multiline comments are good
 -End of line comments are prohibited!
 -JSDoc style is good, but requires a significant time investment
-JSDoc format comments are encouraged because they integrate well with many IDEs including WebStorm, and will improve the usefulness of autocompletion. See <a href="https://developers.google.com/closure/compiler/docs/js-for-compiler">https://developers.google.com/closure/compiler/docs/js-for-compiler</a> and <a href="http://css.dzone.com/articles/introduction-jsdoc">http://css.dzone.com/articles/introduction-jsdoc</a> for more information on JSDoc.</li>
+JSDoc format comments are encouraged because they integrate well with many IDEs including WebStorm, and will improve the usefulness of autocompletion. See <a href="https://developers.google.com/closure/compiler/docs/js-for-compiler"><a href="https://developers.google.com/closure/compiler/docs/js-for-compiler">https://developers.google.com/closure/compiler/docs/js-for-compiler</a></a> and <a href="http://css.dzone.com/articles/introduction-jsdoc"><a href="http://css.dzone.com/articles/introduction-jsdoc">http://css.dzone.com/articles/introduction-jsdoc</a></a> for more information on JSDoc.</li>
 </ul>
 <h1 id="quotes">Quotes</h1>
 <p>Prefer single quotes (&#39;) over double quotes (&quot;), but consistency is key. If you’re embedding a String which needs to include an &#39; in a string declaration escape it with a backslash, rather than swapping between single and double quotes.</p>
@@ -74,6 +76,9 @@ JSDoc format comments are encouraged because they integrate well with many IDEs 
 <p>Use opening brace on the same line, and use braces always - no shorthand code or implied block scoping.</p>
 <h1 id="blank-lines">Blank lines</h1>
 <p>Use newlines to group logically related pieces of code.</p>
+
+</div>
+</div>
 
 </main>
 <footer class="zurb-footer">
