--- a/README.html
+++ b/README.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:site_name" content="MMT Digital's JavaScript Style Guide"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:locale" content="en_GB"/>
     <title>JS Style Guide - MMT Digital</title>
     <link rel="stylesheet" href="css/app.css"/>
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -38,7 +41,6 @@
     </nav>
 </div></header>
 <main role="main">
-    <div class="row">
         
     <pre><code>MMT Digital&#39;s JavaScript style guide</code></pre>
 <p>====================================</p>
