Update references to CSS guidelines

--- a/README.html
+++ b/README.html
@@ -6,7 +6,7 @@
     <meta property="og:site_name" content="MMT Digital's JavaScript Style Guide"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB"/>
-    <title>JS Style Guide - MMT Digital</title>
+    <title></title>
     <link rel="stylesheet" href="css/app.css"/>
     <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
@@ -17,33 +17,32 @@
         <ul class="title-area">
             <li class="name">
                 <h1>
-                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em"/> JavaScript Style Guide</a>
+                    <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em"/> SASS / CSS Development Guidelines</a>
                 </h1>
             </li>
-            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+            <!--<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>-->
         </ul>
 
-        <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="left">
-                <li class="has-dropdown">
-                    <a href="./">Overview</a>
-                    <ul class="dropdown">
-                        <li><a href="summary.html">The short version</a></li>
-                        <li><a href="formatting.html">Source code formatting</a></li>
-                        <li><a href="naming-conventions.html">Naming Conventions</a></li>
-                        <li><a href="development-best-practices.html">JavaScript Best Practices</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
+        <!--<section class="top-bar-section">-->
+            <!--<ul class="left">-->
+                <!--<li class="has-dropdown">-->
+                    <!--<a href="./">Overview</a>-->
+                    <!--<ul class="dropdown">-->
+                        <!--<li><a href="summary.html">The short version</a></li>-->
+                        <!--<li><a href="formatting.html">Source code formatting</a></li>-->
+                        <!--<li><a href="naming-conventions.html">Naming Conventions</a></li>-->
+                        <!--<li><a href="development-best-practices.html">JavaScript Best Practices</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</section>-->
     </nav>
 </div></header>
 <main role="main">
     
-    <pre><code>MMT Digital&#39;s JavaScript style guide</code></pre>
-<p>====================================</p>
-<p>A work in progress! See <a href="http://psyked.github.io/js-style-guide/">http://psyked.github.io/js-style-guide/</a></p>
+    <pre><code>MMT Digital&#39;s CSS / SASS Development Guidelines</code></pre>
+<p>===============================================</p>
+<p>A work in progress! See <a href="http://psyked.github.io/css-sass-style-guide/">http://psyked.github.io/css-sass-style-guide/</a></p>
 
 </main>
 <footer class="zurb-footer">
