--- a/README.html
+++ b/README.html
@@ -50,12 +50,18 @@
         
 <div class="large-4 columns">
     <h4>Want to contribute?</h4>
-
     <p>This website is hosted on GitHub, so it's really easy to get involved.</p>
-
     <p>Fork this project or create a Pull request and we can bring your suggestions into the fold.</p>
-
     <p><a href="https://github.com/psyked/css-sass-style-guide" class="button">View this project on GitHub.</a></p>
+</div>
+<div class="large-8 columns">
+<h4 id="have-you-seen-our-other-projects-">Have you seen our other projects?</h4>
+<ul>
+<li><a href="http://psyked.github.io/html-style-guide/">HTML Development Guidelines</a></li>
+<li><strong>SASS / CSS Development Guidelines</strong></li>
+<li><a href="http://psyked.github.io/js-style-guide/">JavaScript Style Guide</a></li>
+</ul>
+
 </div>
     </div>
 </footer>
