Add core principles and formatting guidelines to the index page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,34 @@
         </div>
     </div>
     
-    
+    <div class='row'>
+<div class='large-6 columns'>
+<h2 id="core-principles">Core Principles</h2>
+<p>We follow the SASS structure as defined by Eric Myers on his <a href="http://stackoverflow.com/questions/12822810/structuring-css-sass-less-files-by-elements-by-function-and-by-media-queries/12824576#12824576">Stack Overflow response.</a></p>
+<p>The core principles are:</p>
+<ol>
+<li>Start general.</li>
+<li>Move towards specifics as slowly as possible.</li>
+<li>Never divide based on any external concepts.</li>
+</ol>
+<p>In addition, we say that:</p>
+<ul>
+<li>Responsive/IE styles should go as close to the structure they affect as possible.</li>
+</ul>
+
+</div>
+<div class='large-6 columns'>
+<h2 id="sass-css-formatting">SASS/CSS Formatting</h2>
+<ul>
+<li>Sass mixins should be <strong>camelCase</strong> (no spaces, underscores or hyphens), e.g: <code>borderRadiusIdentical</code></li>
+<li>CSS should be lowercase with words separated by hyphens, e.g: <code>.feedback-label</code></li>
+</ul>
+<p><em>Note: Where possible only &quot;classes&quot; should be used for styling and &quot;Id&#39;s&quot; reserved for manipulating the DOM.</em></p>
+
+</div>
+</div>
+
+
 </main>
 <footer class="zurb-footer">
     <div class="row">
