Add expanded intro section and image

--- a/index.html
+++ b/index.html
@@ -50,19 +50,28 @@
     
     <div class='row'>
 <div class='large-12 columns'>
-<h2 id="core-principles">Core Principles</h2>
-<p>We follow the SASS structure as defined by Eric Myers on his <a href="http://stackoverflow.com/questions/12822810/structuring-css-sass-less-files-by-elements-by-function-and-by-media-queries/12824576#12824576">Stack Overflow response.</a></p>
-<p>The core principles are:</p>
+<p>We have an SASS / CSS Structure project on Bitbucket which serves to outline the basic structure for our SCSS source files.
+All projects should use the folder structure and mixins included in this project, which makes it much easier to share
+improvements between multiple projects.</p>
+<p><a href='https://bitbucket.org/mmtdigital/mmtdigital-sass-structure' class='button'>Open the SASS Structure project on Bitbucket</a></p>
+
+</div>
+</div>
+<div class='row'>
+<div class='large-4 columns'>
+<p><img src="assets/HTML5_Styling_512.png" alt="CSS3"></p>
+
+</div>
+<div class='large-8 columns'>
+<h2 id="code-organization-core-principles">Code Organization: Core Principles</h2>
+<hr>
 <ol>
 <li>Start general.</li>
 <li>Move towards specifics as slowly as possible.</li>
 <li>Never divide based on any external concepts.</li>
 <li>Only use classes for styling, <em>(and keep Id&#39;s for manipulating the DOM with code.)</em></li>
-</ol>
-<p>In addition, we say that:</p>
-<ul>
 <li>Responsive/IE styles should go as close to the structure they affect as possible.</li>
-</ul>
+</ol>
 
 </div>
 </div>
