--- a/README.html
+++ b/README.html
@@ -7,6 +7,14 @@
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB"/>
     <title></title>
+    <link rel="apple-touch-icon" href="./apple-touch-icon-144x144-precomposed.png">
+    <link rel="icon" href="./favicon.png">
+    <!--[if IE]>
+    <link rel="shortcut icon" href="./favicon.ico">
+    <![endif]-->
+    <!-- or, set /favicon.ico for IE10 win -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./apple-touch-icon-144x144-precomposed.png">
     <link rel="stylesheet" href="css/app.css"/>
     <script src="bower_components/modernizr/modernizr.js"></script>
 </head>
@@ -20,22 +28,7 @@
                     <a href="./"><img src="assets/mmt-logo.svg" width="32" height="32" style="margin-right:1em"/> SASS / CSS Development Guidelines</a>
                 </h1>
             </li>
-            <!--<li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>-->
         </ul>
-
-        <!--<section class="top-bar-section">-->
-            <!--<ul class="left">-->
-                <!--<li class="has-dropdown">-->
-                    <!--<a href="./">Overview</a>-->
-                    <!--<ul class="dropdown">-->
-                        <!--<li><a href="summary.html">The short version</a></li>-->
-                        <!--<li><a href="formatting.html">Source code formatting</a></li>-->
-                        <!--<li><a href="naming-conventions.html">Naming Conventions</a></li>-->
-                        <!--<li><a href="development-best-practices.html">JavaScript Best Practices</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</section>-->
     </nav>
 </div></header>
 <main role="main">
