Added a dedicated page for the code structure theory

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ improvements between multiple projects.</p>
 <li>Only use classes for styling, <em>(and keep Id&#39;s for manipulating the DOM with code.)</em></li>
 <li>Responsive/IE styles should go as close to the structure they affect as possible.</li>
 </ol>
+<p><a href='./code-organisation.html' class='button'>What does this mean?</a></p>
 
 </div>
 </div>
