Restructuring homepage content to make the template project more obvious

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:title" content="Summary"/>
+    <meta property="og:title" content="SASS / CSS Development Guidelines"/>
     <meta property="og:site_name" content="MMT Digital's SASS / CSS Style Guide"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB"/>
-    <title>Summary</title>
+    <title>SASS / CSS Development Guidelines</title>
     <link rel="apple-touch-icon" href="./apple-touch-icon-144x144-precomposed.png">
     <link rel="icon" href="./favicon.png">
     <!--[if IE]>
@@ -33,20 +33,29 @@
     </nav>
 </div></header>
 <main role="main">
-    
-    <div class="row">
-        <div class="large-12 columns">
-            <h1>Summary</h1>
-            <hr/>
-        </div>
-    </div>
-    
     <div class='row'>
 <div class='large-12 columns'>
-<p>We have an SASS / CSS Structure project on Bitbucket which serves to outline the basic structure for our SCSS source files.
-All projects should use the folder structure and mixins included in this project, which makes it much easier to share
+<h2 id="sass-template-project">SASS Template Project</h2>
+<hr>
+
+</div>
+</div>
+<div class='row panel'>
+<div class='large-6 columns'>
+<p>We have an SASS / CSS Structure project on Bitbucket which serves to outline the basic structure for our SCSS source files.</p>
+<p>All projects should use the folder structure and mixins included in this project, which makes it much easier to share
 improvements between multiple projects.</p>
-<p><a href='https://bitbucket.org/mmtdigital/mmtdigital-sass-structure' class='button'>Open the SASS Structure project on Bitbucket</a></p>
+<p><a href='https://bitbucket.org/mmtdigital/mmtdigital-sass-structure' class='button'>View the SASS Structure project on Bitbucket</a></p>
+
+</div>
+
+<div class='large-6 columns'>
+<p>All you need to do is:</p>
+<ol>
+<li>Download the latest version of the source files from Bitbucket.</li>
+<li>Drop the files into your project.</li>
+<li>Use it as a scaffold for your structuring your source files and use our existing collection of mixins.</li>
+</ol>
 
 </div>
 </div>
