Add more helpful links to the README file

--- a/README.html
+++ b/README.html
@@ -32,9 +32,22 @@
     </nav>
 </div></header>
 <main role="main">
-    <pre><code>MMT Digital&#39;s CSS / SASS Development Guidelines</code></pre>
-<p>===============================================</p>
-<p>A work in progress! See <a href="http://psyked.github.io/css-sass-style-guide/">http://psyked.github.io/css-sass-style-guide/</a></p>
+    <pre><code>CSS / SASS Development Guidelines</code></pre>
+<p>=================================</p>
+<h2 id="live-preview">Live Preview</h2>
+<p>View the GitHub Pages version of this repo at <a href="http://psyked.github.io/css-sass-style-guide/">http://psyked.github.io/css-sass-style-guide/</a></p>
+<h2 id="contributing">Contributing</h2>
+<p>Want to contribute? You can create a pull request or fork this repository and submit the 
+changes back to this repository.  Read more information at <a href="https://help.github.com/articles/fork-a-repo">https://help.github.com/articles/fork-a-repo</a></p>
+<h2 id="building-the-project">Building the project</h2>
+<p>This project uses <a href="http://gruntjs.com/">Grunt</a> to build a static HTML version of the preview website from the <strong>Markdown</strong> source files.
+To update the HTML files, build the project using Grunt and it will auto-update the HTML using the standard <code>grunt-contrib-watch</code> task.</p>
+<p>The standard installation steps apply for a Grunt project:</p>
+<ol>
+<li><code>npm install grunt-cli -g</code></li>
+<li><code>npm install</code></li>
+<li><code>grunt</code></li>
+</ol>
 
 </main>
 <footer class="zurb-footer">
