--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta property="og:title" content="SASS / CSS Development Guidelines"/>
-    <meta property="og:site_name" content="MMT Digital's SASS / CSS Style Guide"/>
+    <meta property="og:site_name" content="SASS / CSS Style Guide"/>
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_GB"/>
     <title>SASS / CSS Development Guidelines</title>
